--- a/src/functionBased/App.css
+++ b/src/functionBased/App.css
@@ -63,3 +63,10 @@ body {
     outline: none;
     border: none;
 }
+
+.input-submit svg {
+    color: darkcyan;
+    font-size: 20px;
+    margin-top: 2px;
+  }
+  
